@startuml

title __WEEK9-WEEK9_17.FIRSTPACKAGES's Class Diagram__\n

  package  {
    package mooc.logic {
      class ApplicationLogic {
      }
    }
  }
  

  package  {
    class Main {
    }
  }
  

  package  {
    package mooc.ui {
      class TextUserInterface {
      }
    }
  }
  

  package  {
    package mooc.ui {
      interface UserInterface {
      }
    }
  }
  

  ApplicationLogic o-- UserInterface : ui
  TextUserInterface -up-|> UserInterface


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
